# scenario-svs-217b

./: .clang-format  .gitignore  CMakeLists.txt  README.md  analysis.ipynb  analysis_josh.ipynb  analysis_seiji.ipynb  gen_exp.py  generated_exps.sh  generated_exps_josh.sh  generated_exps_josh_6node.sh  generated_exps_josh_butterfly.sh  generated_exps_josh_sunflower.sh  generated_exps_orig.sh  generated_exps_seiji.sh  processed_log.txt  run.py  run.sh  wscript
.waf-tools/: boost.py  default-compiler-flags.py  ns3.py
analysis/: config_capstone_prelim.json  config_capstone_prelim_old.json  config_exp_suppression_tuning.json  config_hashmap_testing.json  config_josh.json  config_seiji.json  config_upgrade.json  config_upgrade_2.json  config_upgrade_3.json  main.py  prelim.sh  run.py  run.sh
analysis/logs/: med_clusters-1-1-300-3-0.3  med_clusters-2-2-300-3-0.3  med_clusters-4-4-300-3-0.3  med_clusters-8-8-300-3-0.3  simple-1-0-300-3-0  simple-1-1-300-3-0  small_clusters-1-1-300-3-0  small_clusters-1-1-300-3-0.3  small_clusters-1-1-300-3-0.5  small_clusters-2-2-300-3-0  small_clusters-2-2-300-3-0.3  small_clusters-2-2-300-3-0.5  small_clusters-4-4-300-3-0  (+6 more)
exp_log_files_seiji/: simple.txt  sunflower.txt
graphs/: graph-style.R
results/: 10rand  20rand  2rand  30rand  36rand  analyze.py  result.txt
scenarios/: README.md  comsci217b.cpp  large-grid.cpp  minindn.cpp  ndn-simple.cpp  randrecent.cpp  simulate.cpp  topology_6_node_bottleneck.cpp
topologies/: README.md  build.py  clean_topologies.py  generate_grid.py  generate_spikes.py  generate_subgraphs.py  sunflower
(+373 files in other folders)
